Add information section on the landing page

--- a/index.html
+++ b/index.html
@@ -23,12 +23,32 @@
                 <button type="button">Sign up</button>
             </div>
             <div class="image-placeholder">
-                this is a placeholder for an image
+                <img src="images/IMG_0961.JPG">
             </div>
         </div>
     </div>
     <div class="info">
-        
+        <div class="info-top">
+            Some random information.
+        </div>
+        <div class="info-bottom">
+            <div class="image-block">
+                <img src="images/DSC_0797.JPEG">
+                <div class="pic-subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="image-block">
+                <img src="images/DSC_0919.JPEG">
+                <div class="pic-subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="image-block">
+                <img src="images/IMG_0839.JPG">
+                <div class="pic-subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="image-block">
+                <img src="images/IMG_0999.JPEG">
+                <div class="pic-subtext">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
     <div class="quotes">
 
