--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="header-bottom-left">
                 <div class="main-text">This website is awesome</div>
                 <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                <button type="button">Sign up</button>
+                <button type="button" class="button-1">Sign up</button>
             </div>
             <div class="image-placeholder">
                 <img src="images/IMG_0961.JPG">
@@ -50,14 +50,29 @@
             </div>
         </div>
     </div>
-    <div class="quotes">
-
+    <div class="quotation">
+        <div class="quotes">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class="speaker">
+            -Thor, God of Thunder
+        </div>
     </div>
     <div class="action">
-
+        <div class="action-box">
+            <div class="call">
+                <div class="call-main">
+                    Call to action! It's time!
+                </div>
+                <div class="call-subtext">
+                    Sign up for our product by clicking that button right over there!
+                </div>
+            </div>
+            <button type="button" class="button-2">Sign up</button>
+        </div>
     </div>
     <div class="footer">
-
+        Copyright © The Odin Project 2021
     </div>
 </body>
 </html>
