Edit text on landing page, add other pages

--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>From Japan With Love</title>
 </head>
 <body>
     <div class="header">
         <div class="header-top">
-            <div class="logo">Header Logo</div>
+            <div class="logo">Japan Trip, August 2024</div>
             <ul class="header-links">
-                <li><a href="https://www.google.com/">header link one</a></li>
-                <li><a href="https://www.google.com/">header link two</a></li>
-                <li><a href="https://www.google.com/">header link three</a></li>
+                <li><a href="pages/day1.html" target="_blank">day 1</a></li>
+                <li><a href="pages/day2.html" target="_blank">day 2</a></li>
+                <li><a href="pages/day3.html" target="_blank">day 3</a></li>
+                <li><a href="pages/day4.html" target="_blank">day 4</a></li>
             </ul>
         </div>
         <div class="header-bottom">
             <div class="header-bottom-left">
-                <div class="main-text">This website is awesome</div>
-                <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                <button type="button" class="button-1">Sign up</button>
+                <div class="main-text">Lost in Japan</div>
+                <div class="subtext">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+                <button type="button" class="button-1">Come to Japan!</button>
             </div>
             <div class="image-placeholder">
                 <img src="images/IMG_0961.JPG">
@@ -29,50 +30,50 @@
     </div>
     <div class="info">
         <div class="info-top">
-            Some random information.
+            Highlights of You.
         </div>
         <div class="info-bottom">
             <div class="image-block">
                 <img src="images/DSC_0797.JPEG">
-                <div class="pic-subtext">this is some subtext under an illustration or image</div>
+                <div class="pic-subtext">The sun was scorching, but still not as hot as you.</div>
             </div>
             <div class="image-block">
                 <img src="images/DSC_0919.JPEG">
-                <div class="pic-subtext">this is some subtext under an illustration or image</div>
+                <div class="pic-subtext">The lights were bright, but you shone the brightest!</div>
             </div>
             <div class="image-block">
                 <img src="images/IMG_0839.JPG">
-                <div class="pic-subtext">this is some subtext under an illustration or image</div>
+                <div class="pic-subtext">Classic and sophisticated. But I'm not talking about Ginza.</div>
             </div>
             <div class="image-block">
                 <img src="images/IMG_0999.JPEG">
-                <div class="pic-subtext">this is some subtext under an illustration or image</div>
+                <div class="pic-subtext">Are you a sunflower? Because you brighten my day and always turn me in your direction.</div>
             </div>
         </div>
     </div>
     <div class="quotation">
         <div class="quotes">
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            You said that money can't buy happiness? He he he he. Sumimasen, come to Japan! I wonder if you know how they live in Tokyo. If you seen it then you mean it. Then you know you have to go, fast and furious!
         </div>
         <div class="speaker">
-            -Thor, God of Thunder
+            -Guy on TikTok
         </div>
     </div>
     <div class="action">
         <div class="action-box">
             <div class="call">
                 <div class="call-main">
-                    Call to action! It's time!
+                    Miss me? Reach out!
                 </div>
                 <div class="call-subtext">
-                    Sign up for our product by clicking that button right over there!
+                    Write an email to me by clicking that button right over there!
                 </div>
             </div>
-            <button type="button" class="button-2">Sign up</button>
+            <button type="button" class="button-2">I miss you!</button>
         </div>
     </div>
     <div class="footer">
-        Copyright © The Odin Project 2021
+        © Meynard Danam Purwa Atmaja 2025. All rights reserved.
     </div>
 </body>
 </html>
