Add photos from day 1

--- a/pages/day1.html
+++ b/pages/day1.html
@@ -15,10 +15,10 @@
             </ul>
         </div>
     </div>
-    <img class="header-img" src="../images/DSC_0797.JPEG">
+    <img class="header-img" src="../images/DSC_0851.JPEG">
     <div class="content-title">
-        <div class="content1-main">Lost in Japan</div>
-        <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+        <div class="content1-main">Kamakura</div>
+        <div class="content1-sub">A jetlagged passenger, a sleep-deprived driver, scorching hot summer weather. That's okay. We are young.</div>
     </div>
     <div class="info">
         <div class="info-top">
