Add photos of day 1

--- a/pages/day1.html
+++ b/pages/day1.html
@@ -18,11 +18,23 @@
     <img class="header-img" src="../images/DSC_0851.JPEG">
     <div class="content-title">
         <div class="content1-main">Kamakura</div>
-        <div class="content1-sub">A jetlagged passenger, a sleep-deprived driver, scorching hot summer weather. That's okay. We are young.</div>
+        <div class="content1-sub">A jetlagged tourist, a sleep-deprived driver, scorching hot summer weather. That's okay. We are young.</div>
+    </div>
+    <div class="day1-top">
+        <!-- <div class="image-placeholder"> -->
+        <div class="jetlag-pic">
+                <img src="../images/DSC_0762.JPEG">
+                <img src="../images/IMG_0642.JPEG">
+                <img src="../images/DSC_0857.JPEG">
+        </div>
+        <div class="day1-text">
+            <div class="content1-main">How To Get Over A Jetlag?</div>
+            <div class="content1-sub">A little nap in the car, a stroll along a seaside town to freshen you up, and of course...</div>
+        </div>
     </div>
     <div class="info">
         <div class="info-top">
-            Places we visited.
+            Foods...
         </div>
         <div class="info-bottom">
             <div class="image-block">
@@ -41,15 +53,6 @@
                 <img src="../images/IMG_0999.JPEG">
                 <div class="pic-subtext">Are you a sunflower? Because you brighten my day and always turn me in your direction.</div>
             </div>
-        </div>
-    </div>
-    <div class="content-1">
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
-        </div>
-        <div class="content-text">
-            <div class="content1-main">Lost in Japan</div>
-            <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
         </div>
     </div>
     <div class="content-2">
