Add pictures of day 1

--- a/pages/day1.html
+++ b/pages/day1.html
@@ -18,8 +18,9 @@
     <img class="header-img" src="../images/DSC_0851.JPEG">
     <div class="content-title">
         <div class="content1-main">Kamakura</div>
-        <div class="content1-sub">A jetlagged tourist, a sleep-deprived driver, scorching hot summer weather. That's okay. We are young.</div>
+        <div class="content1-sub">A jet lagged tourist, a sleep-deprived driver, scorching hot summer weather. That's okay. We are young.</div>
     </div>
+    <div class="border"></div>
     <div class="day1-top">
         <!-- <div class="image-placeholder"> -->
         <div class="jetlag-pic">
@@ -28,40 +29,46 @@
                 <img src="../images/DSC_0857.JPEG">
         </div>
         <div class="day1-text">
-            <div class="content1-main">How To Get Over A Jetlag?</div>
-            <div class="content1-sub">A little nap in the car, a stroll along a seaside town to freshen you up, and of course...</div>
+            <div class="content1-main">How To Get Over Jet Lag?</div>
+            <div class="content1-sub">A short nap in the car, a stroll along a seaside town to refresh you, and of course...</div>
         </div>
     </div>
-    <div class="info">
-        <div class="info-top">
+    <div class="food">
+        <div class="food-top">
             Foods...
         </div>
-        <div class="info-bottom">
+        <div class="food-middle">
+            Plenty of foods. And puns.
+        </div>
+        <div class="food-bottom">
             <div class="image-block">
-                <img src="../images/DSC_0797.JPEG">
-                <div class="pic-subtext">The sun was scorching, but still not as hot as you.</div>
+                <img src="../images/IMG_0488.JPEG">
+                <div class="pic-subtext">Love it so matcha.</div>
             </div>
             <div class="image-block">
-                <img src="../images/DSC_0919.JPEG">
-                <div class="pic-subtext">The lights were bright, but you shone the brightest!</div>
+                <img src="../images/IMG_0489.JPG">
+                <div class="pic-subtext">The tempura-ture might be high, but the tempura was just right.</div>
             </div>
             <div class="image-block">
-                <img src="../images/IMG_0839.JPG">
-                <div class="pic-subtext">Classic and sophisticated. But I'm not talking about Ginza.</div>
+                <img src="../images/IMG_0602.JPG">
+                <div class="pic-subtext">Soda-lightful.</div>
             </div>
             <div class="image-block">
-                <img src="../images/IMG_0999.JPEG">
-                <div class="pic-subtext">Are you a sunflower? Because you brighten my day and always turn me in your direction.</div>
+                <img src="../images/DSC_0771.JPEG">
+                <div class="pic-subtext">Berry berry good.</div>
             </div>
         </div>
     </div>
     <div class="content-2">
         <div class="content-text">
-            <div class="content2-main">Lost in Japan</div>
-            <div class="content2-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+            <div class="content2-main">And Cultures Too</div>
+            <div class="content2-sub">Of course we could not go to one of Japan's ancient capital and not visit the traditional spots; Tsurugaoka Hachimangu Shrine, Hokoku-ji Temple, Studio Ghibli store, and the railway crossing from Slam Dunk.</div>
         </div>
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
+        <div class="kamakura-spots">
+            <img src="../images/DSC_0797.JPEG">
+            <img src="../images/DSC_0840.JPEG">
+            <img src="../images/DSC_0774.JPEG">
+            <img src="../images/IMG_0671.JPG">
         </div>
     </div>
     <div class="content-1">
