Write the text for day 1.

--- a/pages/day1.html
+++ b/pages/day1.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <div class="header-top">
-            <div class="logo">Day 1, 20240823</div>
+            <div class="logo">Day 1 - 20240823</div>
             <ul class="header-links">
                 <li><a href="../index.html" target="_blank">home</a></li>
             </ul>
@@ -18,7 +18,7 @@
     <img class="header-img" src="../images/DSC_0851.JPEG">
     <div class="content-title">
         <div class="content1-main">Kamakura</div>
-        <div class="content1-sub">A jet lagged tourist, a sleep-deprived driver, scorching hot summer weather. That's okay. We are young.</div>
+        <div class="content1-sub">A jet lagged tourist, a sleep-deprived driver, scorching hot summer weather... Does not sound like the ingredients for a good trip but it's okay. We are young.</div>
     </div>
     <div class="border"></div>
     <div class="day1-top">
@@ -61,8 +61,11 @@
     </div>
     <div class="content-2">
         <div class="content-text">
-            <div class="content2-main">And Cultures Too</div>
-            <div class="content2-sub">Of course we could not go to one of Japan's ancient capital and not visit the traditional spots; Tsurugaoka Hachimangu Shrine, Hokoku-ji Temple, Studio Ghibli store, and the railway crossing from Slam Dunk.</div>
+            <div class="content2-main">And Cultures</div>
+            <div class="content2-sub">Of course we could not go to one of Japan's ancient capital and not visit the traditional spots; Tsurugaoka Hachimangu Shrine, Hokoku-ji Temple, Studio Ghibli store, and the railway crossing from Slam Dunk.
+            </div>
+            <div class="content2-sub">Sadly looking for a parking spot near the railway crossing was not that easy. And I needed to pee. And the traffic was moving very slowly. And we missed the sunset.
+            </div>
         </div>
         <div class="kamakura-spots">
             <img src="../images/DSC_0797.JPEG">
@@ -73,28 +76,21 @@
     </div>
     <div class="content-1">
         <div class="content-text">
-            <div class="content1-main">Lost in Japan</div>
-            <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+            <div class="content1-main">But It's Okay</div>
+            <div class="content1-sub">The railway crossing is overrated anyway. This is better. And less crowd too.</div>
         </div>
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
-        </div>
-    </div>
-    <div class="quotation">
-        <div class="quotes">
-            You said that money can't buy happiness? He he he he. Sumimasen, come to Japan! I wonder if you know how they live in Tokyo. If you seen it then you mean it. Then you know you have to go, fast and furious!
-        </div>
-        <div class="speaker">
-            -Guy on TikTok
+        <div class="sunset-pic">
+            <img src="../images/IMG_0638.JPG">
         </div>
     </div>
     <div class="content-1">
-        <div class="content-text">
-            <div class="content1-main">Lost in Japan</div>
-            <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+        <div class="drunk-pic">
+            <img src="../images/IMG_0683.JPG">
+            <img src="../images/IMG_0686.JPG">
         </div>
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
+        <div class="content-text">
+            <div class="content1-main">And That's How You Get Over Jet Lag</div>
+            <div class="content1-sub">By taking a late night stroll to your hotel, slightly drunk.</div>
         </div>
     </div>
     <div class="info">
