Add pictures of day 2

--- a/pages/day2.html
+++ b/pages/day2.html
@@ -9,82 +9,88 @@
 <body>
     <div class="header">
         <div class="header-top">
-            <div class="logo">Day 1, 20240823</div>
+            <div class="logo">Day 1 - 20240823</div>
             <ul class="header-links">
                 <li><a href="../index.html" target="_blank">home</a></li>
             </ul>
         </div>
     </div>
-    <img class="header-img" src="../images/DSC_0797.JPEG">
+    <img class="header-img" src="../images/DSC_0851.JPEG">
     <div class="content-title">
-        <div class="content1-main">Lost in Japan</div>
-        <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+        <div class="content1-main">Kamakura</div>
+        <div class="content1-sub">A jet lagged tourist, a sleep-deprived driver, scorching hot summer weather... Does not sound like the ingredients for a good trip but it's okay. We are young.</div>
     </div>
-    <div class="info">
-        <div class="info-top">
-            Places we visited.
+    <div class="border"></div>
+    <div class="day1-top">
+        <!-- <div class="image-placeholder"> -->
+        <div class="jetlag-pic">
+                <img src="../images/DSC_0762.JPEG">
+                <img src="../images/IMG_0642.JPEG">
+                <img src="../images/DSC_0857.JPEG">
         </div>
-        <div class="info-bottom">
-            <div class="image-block">
-                <img src="../images/DSC_0797.JPEG">
-                <div class="pic-subtext">The sun was scorching, but still not as hot as you.</div>
-            </div>
-            <div class="image-block">
-                <img src="../images/DSC_0919.JPEG">
-                <div class="pic-subtext">The lights were bright, but you shone the brightest!</div>
-            </div>
-            <div class="image-block">
-                <img src="../images/IMG_0839.JPG">
-                <div class="pic-subtext">Classic and sophisticated. But I'm not talking about Ginza.</div>
-            </div>
-            <div class="image-block">
-                <img src="../images/IMG_0999.JPEG">
-                <div class="pic-subtext">Are you a sunflower? Because you brighten my day and always turn me in your direction.</div>
-            </div>
+        <div class="day1-text">
+            <div class="content1-main">How To Get Over Jet Lag?</div>
+            <div class="content1-sub">A short nap in the car, a stroll along a seaside town to refresh you, and of course...</div>
         </div>
     </div>
-    <div class="content-1">
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
+    <div class="food">
+        <div class="food-top">
+            Foods...
         </div>
-        <div class="content-text">
-            <div class="content1-main">Lost in Japan</div>
-            <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+        <div class="food-middle">
+            Plenty of foods. And puns.
+        </div>
+        <div class="food-bottom">
+            <div class="image-block">
+                <img src="../images/IMG_0488.JPEG">
+                <div class="pic-subtext">Love it so matcha.</div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0489.JPG">
+                <div class="pic-subtext">The tempura-ture might be high, but the tempura was just right.</div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0602.JPG">
+                <div class="pic-subtext">Soda-lightful.</div>
+            </div>
+            <div class="image-block">
+                <img src="../images/DSC_0771.JPEG">
+                <div class="pic-subtext">Berry berry good.</div>
+            </div>
         </div>
     </div>
     <div class="content-2">
         <div class="content-text">
-            <div class="content2-main">Lost in Japan</div>
-            <div class="content2-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+            <div class="content2-main">And Cultures</div>
+            <div class="content2-sub">Of course we could not go to one of Japan's ancient capital and not visit the traditional spots; Tsurugaoka Hachimangu Shrine, Hokoku-ji Temple, Studio Ghibli store, and the railway crossing from Slam Dunk.
+            </div>
+            <div class="content2-sub">Sadly looking for a parking spot near the railway crossing was not that easy. And I needed to pee. And the traffic was moving very slowly. And we missed the sunset.
+            </div>
         </div>
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
-        </div>
-    </div>
-    <div class="content-1">
-        <div class="content-text">
-            <div class="content1-main">Lost in Japan</div>
-            <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
-        </div>
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
-        </div>
-    </div>
-    <div class="quotation">
-        <div class="quotes">
-            You said that money can't buy happiness? He he he he. Sumimasen, come to Japan! I wonder if you know how they live in Tokyo. If you seen it then you mean it. Then you know you have to go, fast and furious!
-        </div>
-        <div class="speaker">
-            -Guy on TikTok
+        <div class="kamakura-spots">
+            <img src="../images/DSC_0797.JPEG">
+            <img src="../images/DSC_0840.JPEG">
+            <img src="../images/DSC_0774.JPEG">
+            <img src="../images/IMG_0671.JPG">
         </div>
     </div>
     <div class="content-1">
         <div class="content-text">
-            <div class="content1-main">Lost in Japan</div>
-            <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+            <div class="content1-main">But It's Okay</div>
+            <div class="content1-sub">The railway crossing is overrated anyway. This is better. And less crowd too.</div>
         </div>
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
+        <div class="sunset-pic">
+            <img src="../images/IMG_0638.JPG">
+        </div>
+    </div>
+    <div class="content-1">
+        <div class="drunk-pic">
+            <img src="../images/IMG_0683.JPG">
+            <img src="../images/IMG_0686.JPG">
+        </div>
+        <div class="content-text">
+            <div class="content1-main">And That's How You Get Over Jet Lag</div>
+            <div class="content1-sub">By taking a late night stroll to your hotel, slightly drunk.</div>
         </div>
     </div>
     <div class="info">
