Write text for day 2

--- a/pages/day1.html
+++ b/pages/day1.html
@@ -17,7 +17,7 @@
     </div>
     <img class="header-img" src="../images/DSC_0851.JPEG">
     <div class="content-title">
-        <div class="content1-main">Kamakura</div>
+        <div class="content1-main">Dealing with Jet Lag And Sleep Deprivation</div>
         <div class="content1-sub">A jet lagged tourist, a sleep-deprived driver, scorching hot summer weather... Does not sound like the ingredients for a good trip but it's okay. We are young.</div>
     </div>
     <div class="border"></div>
@@ -29,8 +29,8 @@
                 <img src="../images/DSC_0857.JPEG">
         </div>
         <div class="day1-text">
-            <div class="content1-main">How To Get Over Jet Lag?</div>
-            <div class="content1-sub">A short nap in the car, a stroll along a seaside town to refresh you, and of course...</div>
+            <div class="content1-main">First Things First</div>
+            <div class="content1-sub">A short nap in the car, a stroll along a seaside town to refresh you, and then of course...</div>
         </div>
     </div>
     <div class="food">
