--- a/pages/day2.html
+++ b/pages/day2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css">
-    <title>Japan Day 1</title>
+    <title>Japan Day 2</title>
 </head>
 <body>
     <div class="header">
@@ -15,48 +15,92 @@
             </ul>
         </div>
     </div>
-    <img class="header-img" src="../images/DSC_0851.JPEG">
+    <img class="header-img-day-2" src="../images/DSC_0906.JPEG">
     <div class="content-title">
-        <div class="content1-main">Kamakura</div>
-        <div class="content1-sub">A jet lagged tourist, a sleep-deprived driver, scorching hot summer weather... Does not sound like the ingredients for a good trip but it's okay. We are young.</div>
+        <div class="content1-main">How To Tokyo</div>
+        <div class="content1-sub"><i>"More than any other city, Tokyo demonstrates that 'city' is a verb, and not a noun"</i> -Toshiko Mori</div>
     </div>
     <div class="border"></div>
     <div class="day1-top">
         <!-- <div class="image-placeholder"> -->
-        <div class="jetlag-pic">
-                <img src="../images/DSC_0762.JPEG">
-                <img src="../images/IMG_0642.JPEG">
-                <img src="../images/DSC_0857.JPEG">
+        <div class="train-pic">
+                <img src="../images/IMG_9028.JPEG">
+                <img src="../images/IMG_9124.JPEG">
+                <img src="../images/IMG_9102.JPEG">
         </div>
-        <div class="day1-text">
-            <div class="content1-main">How To Get Over Jet Lag?</div>
-            <div class="content1-sub">A short nap in the car, a stroll along a seaside town to refresh you, and of course...</div>
+        <div class="day2-text">
+            <div class="content1-main">Ride The Train</div>
+            <div class="content1-sub">Be a real Tokyoite. Parking is expensive and hard to find. Just take the train and walk. </div>
+            <div class="content1-sub">And you will need to walk a lot... You know, if you want to...</div>
         </div>
     </div>
     <div class="food">
         <div class="food-top">
-            Foods...
+            Eat Lots Of Foods
         </div>
         <div class="food-middle">
-            Plenty of foods. And puns.
+            Like, a lot.
         </div>
         <div class="food-bottom">
             <div class="image-block">
-                <img src="../images/IMG_0488.JPEG">
-                <div class="pic-subtext">Love it so matcha.</div>
+                <img src="../images/IMG_9044.JPEG">
+                <div class="pic-subtext"></div>
             </div>
             <div class="image-block">
-                <img src="../images/IMG_0489.JPG">
-                <div class="pic-subtext">The tempura-ture might be high, but the tempura was just right.</div>
+                <img src="../images/IMG_9034.JPEG">
+                <div class="pic-subtext"></div>
             </div>
             <div class="image-block">
-                <img src="../images/IMG_0602.JPG">
-                <div class="pic-subtext">Soda-lightful.</div>
+                <img src="../images/IMG_9054.JPEG">
+                <div class="pic-subtext"></div>
             </div>
             <div class="image-block">
-                <img src="../images/DSC_0771.JPEG">
-                <div class="pic-subtext">Berry berry good.</div>
+                <img src="../images/IMG_9047.JPEG">
+                <div class="pic-subtext"></div>
             </div>
+        </div>
+    </div>
+    <div class="quotation">
+        <div class="quotes">
+            If I had to eat only in one city for the rest of my life, Tokyo would be it.
+        </div>
+        <div class="speaker">
+            -Anthony Bourdain
+        </div>
+    </div>
+    <div class="food">
+        <div class="food-top">
+            Eat MORE Foods
+        </div>
+        <div class="food-middle">
+            We really ate a lot.
+        </div>
+        <div class="food-bottom">
+            <div class="image-block">
+                <img src="../images/IMG_9049.JPEG">
+                <div class="pic-subtext">From fried stuffs</div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0871.JPG">
+                <div class="pic-subtext">to raw seafoods</div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0896.JPG">
+                <div class="pic-subtext">to cool jelly</div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0909.JPG">
+                <div class="pic-subtext">to hot curry, which was too hot.</div>
+            </div>
+        </div>
+    </div>
+    <div class="content-1">
+        <div class="content-text">
+            <div class="content1-main">Watch People</div>
+            <div class="content1-sub">Take a selfie. Watch the couple behind you who may or may not be in the middle of a fight.</div>
+        </div>
+        <div class="sunset-pic">
+            <img src="../images/IMG_0638.JPG">
         </div>
     </div>
     <div class="content-2">
@@ -72,15 +116,6 @@
             <img src="../images/DSC_0840.JPEG">
             <img src="../images/DSC_0774.JPEG">
             <img src="../images/IMG_0671.JPG">
-        </div>
-    </div>
-    <div class="content-1">
-        <div class="content-text">
-            <div class="content1-main">But It's Okay</div>
-            <div class="content1-sub">The railway crossing is overrated anyway. This is better. And less crowd too.</div>
-        </div>
-        <div class="sunset-pic">
-            <img src="../images/IMG_0638.JPG">
         </div>
     </div>
     <div class="content-1">
