Add photos for day 2

--- a/pages/day2.html
+++ b/pages/day2.html
@@ -96,11 +96,40 @@
     </div>
     <div class="content-1">
         <div class="content-text">
-            <div class="content1-main">Watch People</div>
-            <div class="content1-sub">Take a selfie. Watch the couple behind you who may or may not be in the middle of a fight.</div>
+            <div class="content1-main">Take Selfies</div>
+            <div class="content1-sub">Preferably in a mirror or a mirrory surface.</div>
         </div>
-        <div class="sunset-pic">
-            <img src="../images/IMG_0638.JPG">
+        <div class="kamakura-spots">
+            <img src="../images/IMG_0824.JPG">
+            <img src="../images/IMG_9023.JPEG">
+            <img src="../images/DSC_0926.JPEG">
+            <img src="../images/IMG_9232.JPEG">
+        </div>
+    </div>
+    <div class="food">
+        <div class="food-top">
+            Take Pictures In Front Of A Tokyo Landmark; A Vending Machine
+        </div>
+        <div class="food-middle">
+            Take 50, 100 of them. #streetphotography
+        </div>
+        <div class="food-bottom">
+            <div class="image-block">
+                <img src="../images/IMG_0747.JPG">
+                <div class="pic-subtext"></div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0782.JPG">
+                <div class="pic-subtext"></div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0772.JPG">
+                <div class="pic-subtext"></div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0786.JPG">
+                <div class="pic-subtext"></div>
+            </div>
         </div>
     </div>
     <div class="content-2">
