Write text for day 2

--- a/pages/day2.html
+++ b/pages/day2.html
@@ -17,7 +17,7 @@
     </div>
     <img class="header-img-day-2" src="../images/DSC_0906.JPEG">
     <div class="content-title">
-        <div class="content1-main">How To Tokyo</div>
+        <div class="content1-main">How To Tokyo - Summer Edition</div>
         <div class="content1-sub"><i>"More than any other city, Tokyo demonstrates that 'city' is a verb, and not a noun"</i> -Toshiko Mori</div>
     </div>
     <div class="border"></div>
@@ -113,6 +113,9 @@
         <div class="food-middle">
             Take 50, 100 of them. #streetphotography
         </div>
+        <div class="food-middle">
+            And get a drink. You need it.
+        </div>
         <div class="food-bottom">
             <div class="image-block">
                 <img src="../images/IMG_0747.JPG">
@@ -132,30 +135,20 @@
             </div>
         </div>
     </div>
-    <div class="content-2">
+    <div class="content-1">
         <div class="content-text">
-            <div class="content2-main">And Cultures</div>
-            <div class="content2-sub">Of course we could not go to one of Japan's ancient capital and not visit the traditional spots; Tsurugaoka Hachimangu Shrine, Hokoku-ji Temple, Studio Ghibli store, and the railway crossing from Slam Dunk.
-            </div>
-            <div class="content2-sub">Sadly looking for a parking spot near the railway crossing was not that easy. And I needed to pee. And the traffic was moving very slowly. And we missed the sunset.
-            </div>
+            <div class="content1-main">Watch The Fireworks</div>
+            <div class="content1-sub">A little bit of summer's what the whole year's all about.</div>
         </div>
-        <div class="kamakura-spots">
-            <img src="../images/DSC_0797.JPEG">
-            <img src="../images/DSC_0840.JPEG">
-            <img src="../images/DSC_0774.JPEG">
-            <img src="../images/IMG_0671.JPG">
+        <div class="firework-pic">
+            <img src="../images/DSC_0906.JPEG">
         </div>
     </div>
-    <div class="content-1">
-        <div class="drunk-pic">
-            <img src="../images/IMG_0683.JPG">
-            <img src="../images/IMG_0686.JPG">
-        </div>
-        <div class="content-text">
-            <div class="content1-main">And That's How You Get Over Jet Lag</div>
-            <div class="content1-sub">By taking a late night stroll to your hotel, slightly drunk.</div>
-        </div>
+    <div class="fireworks">
+        <img src="../images/DSC_0869.JPEG">
+        <img src="../images/DSC_0872.JPEG">
+        <img src="../images/DSC_0873.JPEG">
+        <img src="../images/DSC_0875.JPEG">
     </div>
     <div class="info">
         <div class="info-top">
@@ -163,20 +156,20 @@
         </div>
         <div class="info-bottom">
             <div class="image-block">
-                <div class="numbers">1027</div>
-                <div class="pic-subtext">kilometers traveled</div>
+                <div class="numbers">16.59</div>
+                <div class="pic-subtext">kilometers walked.</div>
             </div>
             <div class="image-block">
-                <div class="numbers">12</div>
-                <div class="pic-subtext">bottles of water bought</div>
+                <div class="numbers">0</div>
+                <div class="pic-subtext">JPY spent in Ginza.</div>
             </div>
             <div class="image-block">
-                <div class="numbers">343</div>
-                <div class="pic-subtext">photo shots</div>
+                <div class="numbers">1.34</div>
+                <div class="pic-subtext">hours spent waiting to be seated for dinner.</div>
             </div>
             <div class="image-block">
-                <div class="numbers">13246</div>
-                <div class="pic-subtext">steps taken</div>
+                <div class="numbers">2</div>
+                <div class="pic-subtext">people satisfied with the fireworks. maybe more.</div>
             </div>
         </div>
     </div>
